--- a/Productpage-site/styles.css
+++ b/Productpage-site/styles.css
@@ -8,60 +8,117 @@ body{
 }
 
 .container{
-    display: grid;
     background-color: #fff;
-    grid-template-areas: "header" "header" "header"
-                         "product" "content" "email"
-                         "footer" "footer" "footer";
-    grid-template-rows: auto auto auto;
     margin-left: -.47rem;
-    overflow: hidden;
+   
 }
 
 .item1{
-    grid-area: "header";
     background-color: #EB3C33;
-    height: 5rem;
+    height: auto;
     width: 100%;
     position: fixed;
     top: 0;
     z-index: 1;
- 
 }
 
 .item2{
-    grid-area: "product";
-    width: 40%;
+    width: auto;
     margin: 9rem 0 0rem 5rem;  
-    position: relative;
+    float: left;
 }
 
 #pill-img{
     width: 500px;
     height: 706px;
-
 }
 
 .item3{
-    grid-area: "content";
     background-color: #fff;
     color: #000;
-    position: relative;
     width: 60rem;
-    height: 11rem;
-    left: 45rem;
-    bottom: 35rem;
+    height: 18rem;
+    position: relative;
+    top: 18rem;
+    right: 5rem;
     z-index: 0;
-   float: left;
+    float: right;
+}
+
+#description{
+    font-size: inherit;
+}
+
+#logo{
+    width:272px;
+    height: 52px;
+    position: absolute;
+    right: 101rem;
+    top: 0.75rem;
+}
+
+@media(max-width: 1700px){
+    body{
+        font-size: 1rem;
+    }
+
+    .item2::before{
+        content: url("https://qbi.uq.edu.au/files/23665/smart-drugs.jpg");
+        position: relative;
+        bottom: 10rem;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        width: 50%;
+    }
+ 
+    .item3{
+        position: relative;
+        right: 0rem;
+        top: -10rem;
+        width: 90vw;
+        height: 10vh;
+    }
+
+    #logo{
+        position: relative;
+        right: 9rem;
+        width: 120px;
+        height: 19.5px;
+        top: 1.5rem;
+    }
+    
+    nav ul{
+        position: relative;
+        left: 3rem;
+    }
+
+    #pill-img{
+      display: none;
+    }
+    
+    #p{
+        margin-left: -18.5rem;
+        left: 2rem;
+        position: relative;
+        top: -50rem;;
+    }
+    form{
+        position: relative;
+        margin-left: -18.5rem;
+        left: 2rem;
+        margin-top: -30rem;
+        margin-right: 2rem;
+    }
 }
 
 .email{
     display: flex;
     flex-direction: column;
-    grid-area: "email";
-    position: relative;
-    left: 70rem;
-    bottom: 10rem;
+    position: absolute;
+    left: 78.5rem;
+    top: 55rem;
+    float: right;
 }
 
 form{
@@ -127,7 +184,6 @@ form{
 }
 
 .item4{
-    grid-area: "footer";
     height: 1rem;
     width: 100%;
     position: fixed;
@@ -137,14 +193,7 @@ form{
   
 }
 
-#logo{
-    width: 272px;
-    height: 52px;
-    position: relative;
-    right: 47rem;
-    top: 0.75rem;
- 
-}
+
 
 header{
     display: flex;
@@ -159,13 +208,13 @@ nav ul{
     flex-direction: row;
     justify-content: center;  
     margin-left: -15rem; 
-  
+    position: relative;
 }
 
 nav ul li{
     padding: 0.1rem 2rem 0.5rem 2rem;
     list-style: none;
- 
+    
 }
 
 a{
